noinst_LTLIBRARIES = libisis.la
libisis_la_SOURCES = isis.c checksum.c dict.c table.c prefix.c sockunion.c \
	hash.c stream.c thread.c linklist.c isis_circuit.c isis_events.c \
	isis_route.c isis_tlv.c isis_csm.c isis_flags.c isis_misc.c \
	isisd.c isis_adjacency.c isis_dynhn.c isis_spf.c iso_checksum.c \
	isis_lsp.c isis_pdu.c
libisis_la_CFLAGS = -I$(srcdir)/..
